session-16-sidecar-pattern-istio/demo-manifests/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  labels:
    app: httpd
    service: httpd
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: httpd
---
# ServiceEntry for external services (if needed)
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-service-example
spec:
  hosts:
  - httpbin.org
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
